[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/LaserWeapon.gd" type="Script" id=1]

[node name="LaserWeapon" type="Node"]
script = ExtResource( 1 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="burst_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="shot_timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="burst_timer" to="." method="_on_burst_timer_timeout"]
